Javascript validation add on contact form for streatch task

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -221,6 +221,15 @@ input, select, textarea {
 			font-size: 1.25em;
 		}
 
+	#errMessage {	
+		border-radius: 5px;
+		text-align: left; 
+		color: red;
+		background-color: white;
+		font-weight: bold; 
+		padding-left: 10px;
+	}
+	
 /* Container */
 
 	.container {
@@ -2174,6 +2183,8 @@ input, select, textarea {
 			#copyright a:hover {
 				color: #777;
 			}
+
+
 
 /* Large */
 
